--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
     </div><!-- End Skills -->
 
     <!-- ======= Interests ======= -->
-    <div class="interests container">
+    <!-- <div class="interests container">
 
       <div class="section-title">
         <h2>Interests</h2>
@@ -303,7 +303,7 @@
         </div>
       </div>
 
-    </div><!-- End Interests -->
+    </div>End Interests -->
 
     <!-- ======= Testimonials ======= -->
     <div class="testimonials container">
